--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>CLB Ngoại khóa - THPT Trần Hưng Đạo</title>
+  <title>Bùi Sỹ Duy - Phạm Thanh Thế</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>
-      <a href="index.html">Câu lạc bộ ngoại khóa trường THPT Trần Hưng Đạo - Hà Đông</a>
+      <a href="index.html">Câu lạc bộ ngoại khóa trường THPT Chuyên Chu Văn An - Hà Nội</a>
     </h1>
   </header>
   
@@ -55,4 +55,5 @@
     <p>&copy; 2025 All Rights Reserved</p>
   </footer>
 </body>
+
 </html>
