--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>
-      <a href="index.html">Câu lạc bộ ngoại khóa trường THPT Chuyên Chu Văn An - Hà Nội</a>
+      <a href="index.html">Câu lạc bộ ngoại khóa trường THPT Chuyên Chu Văn An</a>
     </h1>
   </header>
   
@@ -57,3 +57,4 @@
 </body>
 
 </html>
+
