--- a/basketball.html
+++ b/basketball.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <title>CLB Bóng rổ - THPT Trần Hưng Đạo</title>
+    <title>Chu Văn An Basketball Team - THPT Chu Văn An</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Trần Hưng Đạo - Hà Đông</a></h1>
+        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chu Văn An</a></h1>
     </header>
 
     <nav>
@@ -17,31 +17,30 @@
 
     <main>
         <section class="intro">
-            <h2><a href="https://web.facebook.com/profile.php?id=100056813384837">CLB Bóng rổ</a></h2>
-            <p>Nơi hội tụ những người yêu thích bóng rổ, phát triển kỹ năng và tinh thần đồng đội.</p>
+            <h2><a href="#">Chu Văn An Basketball Team</a></h2>
+            <p>Đội bóng rổ trẻ trung, đầy nhiệt huyết với phong cách thi đấu hiện đại và tinh thần đồng đội mạnh mẽ.</p>
         </section>
 
         <section class="activities">
             <h3>Tổng quan</h3>
-            <p>Sau 4 mùa hoạt động, Trần Hưng Đạo - Hà Đông Basketball team nhận thấy rằng bộ môn bóng rổ vẫn chưa bao giờ hết “nóng” bởi sự hấp dẫn của chính nó. Bước sang mùa thứ 5, chúng mình mong muốn chiêu mộ thêm nhiều thành viên không chỉ có sự sáng tạo, đam mê, nhiệt huyết với trái bóng cam mà còn có cả tinh thần thép; sẵn sàng vượt qua những bài tập thể lực cũng như sự cam go của những trận thi đấu và cả tinh thần trách nhiệm cao.</p>
+            <p>CLB bóng rổ trường THPT Chu Văn An được thành lập nhằm tạo sân chơi cho các bạn trẻ đam mê bóng rổ, rèn luyện kỹ năng cá nhân, chiến thuật và thể lực tốt.</p>
 
             <h3>Thành tích</h3>
-            <p>CLB đã đạt được nhiều thành tích ấn tượng, bao gồm: 
+            <p>Các thành tích tiêu biểu:
                 <ul>
-                    <li>Vô địch Giải bóng rổ cấp quận 2024</li>
-                    <li>Á quân Giải bóng rổ liên trường 2023</li>
-                    <li>Hạng Ba Giải bóng rổ truyền thống 2022</li>
+                    <li>Top 8 Giải bóng rổ học sinh Thành phố 2024</li>
+                    <li>Á quân Giải giao hữu liên trường khu vực Tây Hồ 2023</li>
                 </ul>
             </p>
 
             <div class="image-container">
-                <img src="basketball2.jpeg" alt="Hình ảnh CLB Bóng rổ" style="max-width: 50%; height: auto;">
+                <img src="basketball.jpg" alt="CLB Bóng rổ" style="max-width: 50%; height: auto;">
             </div>
         </section>
     </main>
 
     <footer>
-        <p>Trường THPT Trần Hưng Đạo - Hà Đông</p>
+        <p>Trường THPT Chu Văn An</p>
         <p>&copy; 2025 All Rights Reserved</p>
     </footer>
 </body>
