--- a/basketball.html
+++ b/basketball.html
@@ -34,7 +34,7 @@
             </p>
 
             <div class="image-container">
-                <img src="basketball.jpg" alt="CLB Bóng rổ" style="max-width: 50%; height: auto;">
+                <img src="basketball.jpeg" alt="CLB Bóng rổ" style="max-width: 50%; height: auto;">
             </div>
         </section>
     </main>
@@ -45,3 +45,4 @@
     </footer>
 </body>
 </html>
+
