--- a/music.html
+++ b/music.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <title>CLB Hát - THPT Trần Hưng Đạo</title>
+    <title>UpBand - THPT Chu Văn An</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Trần Hưng Đạo - Hà Đông</a></h1>
+        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chu Văn An</a></h1>
     </header>
 
     <nav>
@@ -17,33 +17,30 @@
 
     <main>
         <section class="intro">
-            <h2><a href="https://web.facebook.com/musicoftranhungdaohadong">CLB Hát</a></h2>
-            <p>Nơi hội tụ những giọng ca tài năng, đam mê âm nhạc và biểu diễn trên các sân khấu lớn nhỏ.</p>
+            <h2><a href="#">UpBand</a></h2>
+            <p>Ban nhạc trẻ trung – sôi động – sáng tạo, luôn cháy hết mình ở mọi sân khấu của trường.</p>
         </section>
 
         <section class="activities">
             <h3>Tổng quan</h3>
-            <p>Sau 5 năm hoạt động và phát triển, đứng sau hành trình toả sáng của CLB Âm nhạc Rhythm of THD là những thành viên chủ chốt, những người giữ vai trò quan trọng trong việc định hình hướng đi và phát triển của CLB. Họ không chỉ tài năng mà còn mang trong mình sự nhiệt huyết và tinh thần trách nhiệm.</p>
-            <p>Tiếp nối chặng hành trình dưới cái tên Rhythm of THD với sứ mệnh đưa những ngọn lửa nhỏ với niềm đam mê âm nhạc cháy bỏng, cùng cháy hết mình dưới ánh đèn sân khấu. Dù họ có cá tính khác biệt, nhưng đều chung một nhịp đập,nhiệt huyết trên từng nốt nhạc sẽ giúp họ bay cao, vươn xa hơn trên hành trình âm nhạc.</p>
-            <p>Mùa hè cùng ánh nắng chói chang qua đi , CLB Rhythm of THD đón nhận những làn gió tươi mới – những thành viên trẻ trung, đầy khát vọng. Mỗi người là một mảnh ghép độc đáo, mang theo những màu sắc mới mẻ.</p>
-            <p>Những bước đi mới mẻ này hứa hẹn sẽ làm nên một bản hòa ca tươi sáng, đầy sức sống cho Rhythm of Tran Hung Dao Ha Dong.</p>
-            <h3>Thành tích</h3>
-            <p>CLB đã đạt được nhiều thành tích ấn tượng, bao gồm: 
+            <p>UpBand là CLB âm nhạc của trường, quy tụ các bạn học sinh yêu ca hát, chơi nhạc cụ và sáng tác. Không khí tập luyện luôn tràn đầy năng lượng và cảm hứng nghệ thuật.</p>
+
+            <h3>Biểu diễn nổi bật</h3>
+            <p>
                 <ul>
-                    <li>Giải Nhất cuộc thi "Giọng ca vàng" cấp thành phố 2024</li>
-                    <li>Á quân cuộc thi "Tài năng trẻ" năm 2023</li>
-                    <li>Giải Ba cuộc thi "Hát mãi ước mơ" 2022</li>
+                    <li>Biểu diễn tại Lễ khai giảng 2024–2025</li>
+                    <li>Show âm nhạc "CVA Music Night" 2024</li>
                 </ul>
             </p>
 
             <div class="image-container">
-                <img src="music2.jpeg" alt="Hình ảnh CLB Hát" style="max-width: 50%; height: auto;">
+                <img src="music.jpeg" alt="Ban nhạc UpBand" style="max-width: 50%; height: auto;">
             </div>
         </section>
     </main>
 
     <footer>
-        <p>Trường THPT Trần Hưng Đạo - Hà Đông</p>
+        <p>Trường THPT Chu Văn An</p>
         <p>&copy; 2025 All Rights Reserved</p>
     </footer>
 </body>
