--- a/dance.html
+++ b/dance.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <title>CLB Nhảy - THPT Trần Hưng Đạo</title>
+    <title>Chu Văn An Drama Club - THPT Chu Văn An</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Trần Hưng Đạo - Hà Đông</a></h1>
+        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chu Văn An</a></h1>
     </header>
 
     <nav>
@@ -17,32 +17,30 @@
 
     <main>
         <section class="intro">
-            <h2><a href="https://web.facebook.com/euwthddanceclub">CLB Nhảy</a></h2>
-            <p>Nơi các bạn trẻ đam mê vũ đạo có thể thỏa sức sáng tạo, luyện tập và biểu diễn.</p>
+            <h2><a href="#">Chu Văn An Drama Club</a></h2>
+            <p>CLB kịch nghệ đầy sáng tạo, nơi những câu chuyện được tái hiện sống động qua từng vai diễn.</p>
         </section>
 
         <section class="activities">
             <h3>Tổng quan</h3>
-            <p>Khi EUW bước vào một hành trình mới đầy hứa hẹn, chúng tôi tự hào giới thiệu đội ngũ lãnh đạo chủ chốt, những người sẽ dẫn dắt câu lạc bộ đến những đỉnh cao mới. Đây không chỉ là những vũ công tài năng mà còn là những người truyền cảm hứng, mang trong mình niềm đam mê mãnh liệt và sự sáng tạo vô hạn.</p>
-            <p>Đội ngũ này không chỉ gắn kết nhau bởi kỹ năng nhảy điêu luyện mà còn bởi một tầm nhìn chung về việc xây dựng một môi trường sáng tạo và thân thiện. Họ sẽ là những người dẫn dắt, giúp mỗi thành viên trong câu lạc bộ phát huy hết khả năng của mình, đồng thời tạo ra những khoảnh khắc tuyệt vời trong từng buổi tập.</p>
-            <p>Hãy cùng chờ đón những điều thú vị và những màn trình diễn đầy sáng tạo từ đội ngũ lãnh đạo của EUW trong thời gian tới.</p>
-            <h3>Thành tích</h3>
-            <p>CLB đã gặt hái được nhiều thành công, bao gồm: 
+            <p>Câu lạc bộ Drama của trường là điểm đến lý tưởng cho các bạn yêu thích diễn xuất, biên kịch và nghệ thuật sân khấu.</p>
+
+            <h3>Hoạt động tiêu biểu</h3>
+            <p>
                 <ul>
-                    <li>Quán quân cuộc thi "Dance Battle" cấp thành phố 2024</li>
-                    <li>Á quân cuộc thi "Vũ điệu trẻ" năm 2023</li>
-                    <li>Giải Ba cuộc thi "Shine Your Dance" 2022</li>
+                    <li>Dàn dựng vở diễn "Tuổi học trò" tại lễ tổng kết 2024</li>
+                    <li>Biểu diễn múa – kịch tại Hội diễn Văn nghệ Quận</li>
                 </ul>
             </p>
 
             <div class="image-container">
-                <img src="dance2.jpeg" alt="Hình ảnh CLB Nhảy" style="max-width: 50%; height: auto;">
+                <img src="dance.jpeg" alt="CLB Kịch nghệ" style="max-width: 50%; height: auto;">
             </div>
         </section>
     </main>
 
     <footer>
-        <p>Trường THPT Trần Hưng Đạo - Hà Đông</p>
+        <p>Trường THPT Chu Văn An</p>
         <p>&copy; 2025 All Rights Reserved</p>
     </footer>
 </body>
