--- a/art.html
+++ b/art.html
@@ -14,11 +14,8 @@
 
   <nav>
     <a href="index.html">Trang chủ</a>
-    <a href="volleyball.html">CLB Bóng chuyền</a>
-    <a href="badminton.html">CLB Cầu lông</a>
-    <a href="basketball.html">CLB Bóng rổ</a>
-    <a href="dance.html">CLB Nhảy</a>
-    <a href="music.html">CLB Hát</a>
+    <a href="sport.html">CLB thể thao</a>
+    <a href="art.html">CLB nghệ thuật</a>
   </nav>
 
   <main>
@@ -52,6 +49,18 @@
           <img src="dance.jpeg" alt="CLB Nhảy">
         </div>
       </div>
+
+      <div class="row">
+        <div class="text-col">
+          <h2><a href="draw.html">CLB Hát</a></h2>
+          <p>+ Cơ hội trưng bày tác phẩm tại nhiều triển lãm nổi tiếng</p>
+        </div>
+        <div class="image-col">
+          <img src="draw.jpeg" alt="CLB vẽ">
+        </div>
+      </div>
+
+      
     </section>
   </main>
 
@@ -60,4 +69,5 @@
     <p>&copy; 2025 All Rights Reserved</p>
   </footer>
 </body>
+
 </html>
