--- a/art.html
+++ b/art.html
@@ -52,11 +52,11 @@
 
       <div class="row">
         <div class="text-col">
-          <h2><a href="draw.html">CLB Hát</a></h2>
+          <h2><a href="draw.html">CLB Vẽ</a></h2>
           <p>+ Cơ hội trưng bày tác phẩm tại nhiều triển lãm nổi tiếng</p>
         </div>
         <div class="image-col">
-          <img src="draw.jpeg" alt="CLB vẽ">
+          <img src="draw.jpeg" alt="CLB Vẽ">
         </div>
       </div>
 
@@ -71,3 +71,4 @@
 </body>
 
 </html>
+
