--- a/art.html
+++ b/art.html
@@ -52,11 +52,11 @@
 
       <div class="row">
         <div class="text-col">
-          <h2><a href="draw.html">CLB Vẽ</a></h2>
+          <h2><a href="draw.html">CLB Mỹ Thuật</a></h2>
           <p>+ Cơ hội trưng bày tác phẩm tại nhiều triển lãm nổi tiếng</p>
         </div>
         <div class="image-col">
-          <img src="draw.jpeg" alt="CLB Vẽ">
+          <img src="draw.jpeg" alt="CLB Mỹ Thuật">
         </div>
       </div>
 
@@ -65,10 +65,11 @@
   </main>
 
   <footer>
-    <p>Trường THPT Trần Hưng Đạo - Hà Đông</p>
+    <p>Trường THPT Chu Văn An</p>
     <p>&copy; 2025 All Rights Reserved</p>
   </footer>
 </body>
 
 </html>
+
 
