--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>+ Và còn rất nhiều thành tích khác....</p>
       </div>
       <div class="image-col">
-        <img src="https://github.com/simpmei20nam/pttt/blob/main/art.jpeg?raw=true" alt="CLB Nghệ thuật">
+        <img src="https://raw.githubusercontent.com/simpmei20nam/pttt/refs/heads/main/art.jpeg" alt="CLB Nghệ thuật">
       </div>
     </section>
   </main>
@@ -57,5 +57,6 @@
 </body>
 
 </html>
+
 
 
