--- a/sport.html
+++ b/sport.html
@@ -46,7 +46,7 @@
           <p>Giành giải nhất đôi nam nữ và giải ba đôi nam tại cuộc thi Trifecta Badminton Showdown 2024.</p>
         </div>
         <div class="image-col">
-          <img src="badminton.jpeg" alt="CLB Cầu lông">
+          <img src="https://scontent.fhan14-3.fna.fbcdn.net/v/t39.30808-6/322475502_1367352904092880_710761123205778722_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=xN8XyyIv8xMQ7kNvwGScjVG&_nc_oc=Adk6gT2zzt1Wan25sad9RRFUWA5dyztTq9FnQP-y7MErrEt6PKxOq4x_PUyH1RtT6tI&_nc_zt=23&_nc_ht=scontent.fhan14-3.fna&_nc_gid=ipjh4mm-eX49f_Ge5X-6Ow&oh=00_AfjPJEy1VLVcNQR-8ie357lJbFmbqvCDUJtBgZwn2qE8AQ&oe=691E705E" alt="CLB Cầu lông">
         </div>
       </div>
 
@@ -70,4 +70,5 @@
 </body>
 
 </html>
+
 
