--- a/art.html
+++ b/art.html
@@ -52,11 +52,11 @@
 
       <div class="row">
         <div class="text-col">
-          <h2><a href="draw.html">CLB Mỹ Thuật</a></h2>
+          <h2><a href="draw.html">Chu D'Art</a></h2>
           <p>+ Cơ hội trưng bày tác phẩm tại nhiều triển lãm nổi tiếng</p>
         </div>
         <div class="image-col">
-          <img src="draw.jpeg" alt="CLB Mỹ Thuật">
+          <img src="https://scontent.fhan2-5.fna.fbcdn.net/v/t39.30808-6/540919152_1074987418134285_2737440980344993791_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=ofBhn82zCuQQ7kNvwEyZAvG&_nc_oc=AdmZprlm1Up3LIAOce2wqL45VtEqmZ0751gASBXSa4mgttQs4NLc0WWkJIleMNsj1F794IwkE5PZcVk7jzE1GG5A&_nc_zt=23&_nc_ht=scontent.fhan2-5.fna&_nc_gid=ia5U_08mk4csxqetufbieg&oh=00_AfiLvyYZ4bE0LHeKSIQQ81vaYMTo-fvwWhbVXwQoN4atBw&oe=691E617F" alt="CLB Mỹ Thuật">
         </div>
       </div>
 
@@ -71,5 +71,6 @@
 </body>
 
 </html>
+
 
 
