--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
   </main>
   
   <footer>
-    <p>Trường THPT Trần Hưng Đạo - Hà Đông</p>
+    <p>Trường THPT Chu Văn An</p>
     <p>&copy; 2025 All Rights Reserved</p>
   </footer>
 </body>
 
 </html>
+
 
 
 
