--- a/art.html
+++ b/art.html
@@ -46,7 +46,7 @@
           <p>+ Đào tạo các thể loại nhảy hiện đại, truyền thống</p>
         </div>
         <div class="image-col">
-          <img src="dance.jpeg" alt="CLB Nhảy">
+          <img src="https://scontent.fhan2-3.fna.fbcdn.net/v/t39.30808-6/541993174_1345667094228760_2007393019747298942_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VA-bO3MRKjcQ7kNvwGHuhmm&_nc_oc=Adm-f-JZBDYKjHQNEi3AVfYkwMBUKy2bnhP_KxMOOnQSht28jA71le3ALAdgsyAGu8PY7DmBwUssjH9TYIQ_7V2b&_nc_zt=23&_nc_ht=scontent.fhan2-3.fna&_nc_gid=UoEHnlYQGGvU4VaDbEWJ7g&oh=00_AfifhOOHDAfBFPBJFV6zRggkNplNQR5UpD_rdCmZd8euHg&oe=691E7D31" alt="CLB Nhảy">
         </div>
       </div>
 
@@ -71,6 +71,7 @@
 </body>
 
 </html>
+
 
 
 
