--- a/music.html
+++ b/music.html
@@ -34,7 +34,7 @@
             </p>
 
             <div class="image-container">
-                <img src="music.jpeg" alt="Ban nhạc UpBand" style="max-width: 50%; height: auto;">
+                <img src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/493601545_1302156808123745_5171460446683246800_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=ivoRasQL7HkQ7kNvwEO955o&_nc_oc=AdnuzbHT7Ye-GKj1NXm7YmPoN6uTbU3CLzePnizXwJ6B8sXbdErwPS5D4dq0hmrcAMh61Wv-sK8JzTcMTBRA09-r&_nc_zt=23&_nc_ht=scontent.fhan2-4.fna&_nc_gid=jYbsA_c26U7wwTbkuuZqug&oh=00_Afh4NW3fFz5Ew7eqGFL3c5t85hc0wWDFGsUsMyGYURMboQ&oe=691E8118" alt="Ban nhạc UpBand" style="max-width: 50%; height: auto;">
             </div>
         </section>
     </main>
@@ -45,3 +45,4 @@
     </footer>
 </body>
 </html>
+
