--- a/art.html
+++ b/art.html
@@ -2,13 +2,13 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>CLB Nghệ thuật - THPT Trần Hưng Đạo</title>
+  <title>CLB Nghệ thuật - THPT Chuyên Chu Văn An</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>
-      <a href="index.html">Câu lạc bộ ngoại khóa trường THPT Trần Hưng Đạo - Hà Đông</a>
+      <a href="index.html">Câu lạc bộ ngoại khóa trường THPT Chuyên Chu Văn An</a>
     </h1>
   </header>
 
@@ -71,6 +71,7 @@
 </body>
 
 </html>
+
 
 
 
