--- a/form.html
+++ b/form.html
@@ -49,7 +49,9 @@
         TRƯỜNG THPT CHU VĂN AN
     </h1>
 
-    <form action="#" method="post" enctype="multipart/form-data">
+    <!-- ĐÃ SỬA FORM TẠI ĐÂY -->
+    <form onsubmit="event.preventDefault(); alert('Đăng kí thành công!'); window.location.href='index.html';" enctype="multipart/form-data">
+
         <table>
             <tr>
                 <td>Họ tên:</td>
@@ -107,6 +109,7 @@
                 </td>
             </tr>
         </table>
+
     </form>
 
 </body>
