--- a/sport.html
+++ b/sport.html
@@ -62,14 +62,18 @@
       </div>
     </section>
   </main>
-
-  <footer>
-    <p>Trường THPT Chu Văn An</p>
-    <p>&copy; 2025 All Rights Reserved</p>
-  </footer>
+<footer>
+  <h3>Liên hệ:</h3>
+  <ul>
+    <li>Điện thoại: 03636363636</li>
+    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chu Văn An</a></li>
+    <li>Tham gia CLB: <a href="form.html">Mẫu đăng kí</a></li>
+  </ul>
+</footer>
 </body>
 
 </html>
+
 
 
 
