--- a/form.html
+++ b/form.html
@@ -49,8 +49,8 @@
         TRƯỜNG THPT CHU VĂN AN
     </h1>
 
-    <!-- ĐÃ SỬA FORM TẠI ĐÂY -->
-    <form onsubmit="event.preventDefault(); alert('Đăng kí thành công!'); window.location.href='index.html';" enctype="multipart/form-data">
+    <!-- FORM CHÍNH XÁC 100% - KHÔNG SUBMIT -->
+    <form onsubmit="event.preventDefault(); alert('Đăng kí thành công!'); window.location.href='index.html';">
 
         <table>
             <tr>
