--- a/index.html
+++ b/index.html
@@ -19,10 +19,20 @@
   </nav>
   
   <main>
-    <section class="intro">
-      <h2>Năng động - Đam mê - Tỏa sáng</h2>
-      <p>Hoạt động ngoại khóa bổ ích, cơ hội thể hiện bản thân, giao lưu kết nối, và tỏa sáng cùng bạn bè.</p>
-    </section>
+  <section class="slogan">
+  <div class="slogan-item">
+    <h3>Năng động</h3>
+    <p>Hoạt động năng nổ và hiệu quả</p>
+  </div>
+  <div class="slogan-item">
+    <h3>Đam mê</h3>
+    <p>Cháy hết mình trong các cuộc chơi</p>
+  </div>
+  <div class="slogan-item">
+    <h3>Tỏa sáng</h3>
+    <p>Giành những giải thưởng cao nhất</p>
+  </div>
+  </section>  
     
     <!-- Hàng 1: Chữ bên trái - Hình ảnh bên phải -->
     <section class="row">
@@ -61,6 +71,7 @@
 </body>
 
 </html>
+
 
 
 
