--- a/form.html
+++ b/form.html
@@ -121,11 +121,12 @@
             <tr>
                 <td>Sở thích:</td>
                 <td>
-                    <label><input type="checkbox" value="covua"> Cờ vua</label><br>
-                    <label><input type="checkbox" value="game"> Trò chơi điện tử</label><br>
-                    <label><input type="checkbox" value="dulich"> Du lịch</label><br>
-                    <label><input type="checkbox" value="camhoa"> Cắm hoa</label><br>
-                    <label><input type="checkbox" value="nauan"> Nấu ăn</label>
+                    <label><input type="checkbox" value="bongda"> Bóng đá</label><br>
+                    <label><input type="checkbox" value="bongro">Bóng rổ</label><br>
+                    <label><input type="checkbox" value="caulong"> Cầu lông</label><br>
+                    <label><input type="checkbox" value="hat"> Hát</label><br>
+                    <label><input type="checkbox" value="nhay"> Nhảy</label><br>
+                    <label><input type="checkbox" value="ve"> Vẽ</label>
                 </td>
             </tr>
 
@@ -141,8 +142,9 @@
                         <option>Bóng đá</option>
                         <option>Bóng rổ</option>
                         <option>Cầu lông</option>
-                        <option>Âm nhạc</option>
+                        <option>Vẽ</option>
                         <option>Nhảy</option>
+                        <option>Hát</option>
                     </select>
                 </td>
             </tr>
