--- a/art.html
+++ b/art.html
@@ -11,45 +11,35 @@
       <a href="index.html">Câu lạc bộ ngoại khóa trường THPT Chuyên Chu Văn An</a>
     </h1>
   </header>
-
   <nav>
     <a href="index.html">Trang chủ</a>
     <a href="sport.html">CLB thể thao</a>
     <a href="art.html">CLB nghệ thuật</a>
   </nav>
-
   <main>
     <section class="intro">
       <h2>CLB Nghệ thuật - Sáng tạo không giới hạn</h2>
       <p>Nơi ươm mầm tài năng nghệ thuật với những hoạt động ca hát, nhảy múa, biểu diễn và hơn thế nữa.</p>
     </section>
-
-    <!-- Alternating Club Items -->
     <section>
-      <!-- Row 1: Text left, Image right (CLB Hát) -->
       <div class="row">
         <div class="text-col">
-          <h2><a href="music.html">CLB Hát</a></h2>
-          <p>+ Giải nhì cuộc thi hát tiếng Anh SING OUT LOUD 2024</p>
-          <p>+ Cơ hội biểu diễn tại các sự kiện lớn của trường</p>
+          <h2><a href="music.html">Up Band</a></h2>
+          <p>+ Một nhóm nhạc nhỏ trong lòng Hà Nội... nhưng đủ để mang lại cho bạn những cảm xúc lớn lao!</p>
         </div>
         <div class="image-col">
           <img src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/493601545_1302156808123745_5171460446683246800_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=ivoRasQL7HkQ7kNvwEO955o&_nc_oc=AdnuzbHT7Ye-GKj1NXm7YmPoN6uTbU3CLzePnizXwJ6B8sXbdErwPS5D4dq0hmrcAMh61Wv-sK8JzTcMTBRA09-r&_nc_zt=23&_nc_ht=scontent.fhan2-4.fna&_nc_gid=jYbsA_c26U7wwTbkuuZqug&oh=00_Afh4NW3fFz5Ew7eqGFL3c5t85hc0wWDFGsUsMyGYURMboQ&oe=691E8118" alt="CLB Hát">
         </div>
       </div>
-
-      <!-- Row 2: Text right, Image left (CLB Nhảy) -->
       <div class="row reverse">
         <div class="text-col">
-          <h2><a href="dance.html">CLB Nhảy</a></h2>
-          <p>+ Biểu diễn mở màn tại lễ hội văn hóa mùa xuân 2024</p>
-          <p>+ Đào tạo các thể loại nhảy hiện đại, truyền thống</p>
+          <h2><a href="dance.html">Dramaclub Chu Văn An </a></h2>
+          <p>+ Không gian nơi mọi cảm xúc được hóa thân, mọi con người được nhìn thấy, và sân khấu thành bản thể chân thực nhất của mỗi bạn.</p>
         </div>
         <div class="image-col">
           <img src="https://scontent.fhan2-3.fna.fbcdn.net/v/t39.30808-6/541993174_1345667094228760_2007393019747298942_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VA-bO3MRKjcQ7kNvwGHuhmm&_nc_oc=Adm-f-JZBDYKjHQNEi3AVfYkwMBUKy2bnhP_KxMOOnQSht28jA71le3ALAdgsyAGu8PY7DmBwUssjH9TYIQ_7V2b&_nc_zt=23&_nc_ht=scontent.fhan2-3.fna&_nc_gid=UoEHnlYQGGvU4VaDbEWJ7g&oh=00_AfifhOOHDAfBFPBJFV6zRggkNplNQR5UpD_rdCmZd8euHg&oe=691E7D31" alt="CLB Nhảy">
         </div>
       </div>
-
       <div class="row">
         <div class="text-col">
           <h2><a href="draw.html">Chu D'Art</a></h2>
@@ -59,11 +49,8 @@
           <img src="https://scontent.fhan2-5.fna.fbcdn.net/v/t39.30808-6/540919152_1074987418134285_2737440980344993791_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=ofBhn82zCuQQ7kNvwEyZAvG&_nc_oc=AdmZprlm1Up3LIAOce2wqL45VtEqmZ0751gASBXSa4mgttQs4NLc0WWkJIleMNsj1F794IwkE5PZcVk7jzE1GG5A&_nc_zt=23&_nc_ht=scontent.fhan2-5.fna&_nc_gid=ia5U_08mk4csxqetufbieg&oh=00_AfiLvyYZ4bE0LHeKSIQQ81vaYMTo-fvwWhbVXwQoN4atBw&oe=691E617F" alt="CLB Mỹ Thuật">
         </div>
       </div>
-
-      
     </section>
   </main>
-
 <footer>
   <h3>Liên hệ:</h3>
   <ul>
@@ -73,14 +60,7 @@
   </ul>
 </footer>
 </body>
-
 </html>
-
-
-
-
-
-
 
 
 
