--- a/index.html
+++ b/index.html
@@ -35,23 +35,17 @@
   </section>  
     
     <!-- Hàng 1: Chữ bên trái - Hình ảnh bên phải -->
-<section class="slogan">
-  <div class="slogan-item">
-    <h3>Năng động</h3>
-    <p>Hoạt động năng nổ và hiệu quả</p>
-  </div>
-
-  <div class="slogan-item">
-    <h3>Đam mê</h3>
-    <p>Cháy hết mình trong các cuộc chơi</p>
-  </div>
-
-  <div class="slogan-item">
-    <h3>Tỏa sáng</h3>
-    <p>Giành những giải thưởng cao nhất</p>
-  </div>
-</section>
-
+    <section class="row">
+      <div class="text-col">
+        <h2><a href="sport.html">CLB Thể thao</a></h2>
+        <p>+ Giải nhất cầu lông hạng mục đôi nam nữ, giải ba hạng mục đôi nam cuộc thi Trifecta Badminton Showdown 2024</p>
+        <p>+ Bóng rổ giải ba cấp quận</p>
+        <p>+ Bóng chuyền giải ba cấp quận</p>
+      </div>
+      <div class="image-col">
+        <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/482021185_690295173336967_1472393435145065353_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_ohc=6UYwwCWNJowQ7kNvwHfIJOR&_nc_oc=AdlD-ot6b9203gMvqygG2V_xhv-VPp9hYRP1tOVk7OJoA7ZyahOe9OjtcAI404hsFJQ&_nc_zt=23&_nc_ht=scontent.fhan14-1.fna&_nc_gid=iPgbraBoW0q1s8NWLh1gcw&oh=00_Afh8r9A_LGpvSUZYFf7hXVqncFfYWm_FRgBgQHPlSPsHHg&oe=691E7146" alt="CLB Thể thao">
+      </div>
+    </section>
     
     <!-- Hàng 2: Chữ bên phải - Hình ảnh bên trái -->
     <section class="row reverse">
@@ -77,12 +71,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
