--- a/sport.html
+++ b/sport.html
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="text-col">
           <h2><a href="volleyball.html">CLB Bóng đá</a></h2>
-          <p>Đội bóng mở ra giải đấu bóng đá "Mừng đảng mừng xuân"</p>
+          <p>Chu Văn An Football Club - nơi thoả mãn niềm đam mê bóng đá của các học sinh trường THPT Chu Văn An</p>
         </div>
         <div class="image-col">
           <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/465605599_605381211828364_5833549740649003973_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=8KuJyKKlzBwQ7kNvwH0icFV&_nc_oc=AdlsTXJrZWih2X63fFywepeQ1_8GAbRlfGOwMn8cgamkFxTz2rkT_RZ0xFSiXrAHPkc&_nc_zt=23&_nc_ht=scontent.fhan14-1.fna&_nc_gid=p55iCHQP2fxMJYnbUuGQfA&oh=00_AfgK_YkWQ9EMik2rmZOj9J53Q7YisUuFnTd0OZDrrtcppA&oe=691E8425" alt="CLB Bóng chuyền">
@@ -43,7 +43,7 @@
       <div class="row reverse">
         <div class="text-col">
           <h2><a href="badminton.html">CLB Cầu lông</a></h2>
-          <p>Giành giải cao trong cuộc thi cầu lông cấp cụm</p>
+          <p>CLB cầu lông trường THPT Chuyên Chu Văn An - Hà Nội</p>
         </div>
         <div class="image-col">
           <img src="https://scontent.fhan14-3.fna.fbcdn.net/v/t39.30808-6/322475502_1367352904092880_710761123205778722_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=xN8XyyIv8xMQ7kNvwGScjVG&_nc_oc=Adk6gT2zzt1Wan25sad9RRFUWA5dyztTq9FnQP-y7MErrEt6PKxOq4x_PUyH1RtT6tI&_nc_zt=23&_nc_ht=scontent.fhan14-3.fna&_nc_gid=ipjh4mm-eX49f_Ge5X-6Ow&oh=00_AfjPJEy1VLVcNQR-8ie357lJbFmbqvCDUJtBgZwn2qE8AQ&oe=691E705E" alt="CLB Cầu lông">
@@ -73,7 +73,6 @@
 </body>
 
 </html>
-
 
 
 
