--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
     <section class="row">
       <div class="text-col">
         <h2><a href="sport.html">CLB Thể thao</a></h2>
-        <p>+ Giải nhất cầu lông hạng mục đôi nam nữ, giải ba hạng mục đôi nam cuộc thi Trifecta Badminton Showdown 2024</p>
-        <p>+ Bóng rổ giải ba cấp quận</p>
-        <p>+ Bóng chuyền giải ba cấp quận</p>
+        <p>+ Giải nhất cầu lông hạng mục đơn, đôi nam nữ cấp quận và thành phố</p>
+        <p>+ Hạng 3 giải bóng rổ học sinh VSBL</p>
       </div>
       <div class="image-col">
         <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/482021185_690295173336967_1472393435145065353_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_ohc=6UYwwCWNJowQ7kNvwHfIJOR&_nc_oc=AdlD-ot6b9203gMvqygG2V_xhv-VPp9hYRP1tOVk7OJoA7ZyahOe9OjtcAI404hsFJQ&_nc_zt=23&_nc_ht=scontent.fhan14-1.fna&_nc_gid=iPgbraBoW0q1s8NWLh1gcw&oh=00_Afh8r9A_LGpvSUZYFf7hXVqncFfYWm_FRgBgQHPlSPsHHg&oe=691E7146" alt="CLB Thể thao">
@@ -51,7 +50,7 @@
     <section class="row reverse">
       <div class="text-col">
         <h2><a href="art.html">CLB Nghệ thuật</a></h2>
-        <p>+ Giải nhì cuộc thi hát tiếng Anh SING OUT LOUD 2024</p>
+        <p>+ Biểu diễn tại các sự kiện lớn của trường</p>
         <p>+ Và còn rất nhiều thành tích khác....</p>
       </div>
       <div class="image-col">
