--- a/badminton.html
+++ b/badminton.html
@@ -23,19 +23,24 @@
 
         <section class="activities">
             <h3>Tổng quan</h3>
-            <p>Chu Văn An Smashing Team là CLB cầu lông chính thức của trường THPT Chu Văn An. Với đội ngũ thành viên trẻ trung và tinh thần rèn luyện cao, CLB luôn hướng đến mục tiêu phát triển kỹ năng, thể lực và tinh thần thể thao cho học sinh.</p>
-
-            <h3>Thành tích</h3>
-            <p>CLB đã đạt được một số thành tích nổi bật:
-                <ul>
-                    <li>Giải Nhì Giải cầu lông học sinh Quận 2024</li>
-                    <li>Top 4 Giải giao hữu liên trường 2023</li>
-                </ul>
-            </p>
-
+            <p>Là câu lạc bộ cầu lông đầu tiên và duy nhất trực thuộc trường THPT Chu Văn An,  “Chu Văn An” luôn được CST đặt lên đầu tiên như một cách để chúng mình hướng về mái nhà thân thương, “ngạo nghễ” vì là nơi quy tụ những “tinh hoa” của trường Bưởi.</p>
             <div class="image-container">
                 <img src="https://scontent.fhan14-3.fna.fbcdn.net/v/t39.30808-6/322475502_1367352904092880_710761123205778722_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=xN8XyyIv8xMQ7kNvwGScjVG&_nc_oc=Adk6gT2zzt1Wan25sad9RRFUWA5dyztTq9FnQP-y7MErrEt6PKxOq4x_PUyH1RtT6tI&_nc_zt=23&_nc_ht=scontent.fhan14-3.fna&_nc_gid=ipjh4mm-eX49f_Ge5X-6Ow&oh=00_AfjPJEy1VLVcNQR-8ie357lJbFmbqvCDUJtBgZwn2qE8AQ&oe=691E705E" alt="CLB Cầu lông" style="max-width: 50%; height: auto;">
             </div>
+            <h3>Thành tích</h3>
+            <p>CLB đã đạt được một số thành tích nổi bật:
+                <ul>
+                    <li>6 HCV đơn/đôi nam nữ cấp thành phố</li>
+                    <li>5 HCV đơn/đôi nam nữ cấp quận</li>
+                    <li>2 HCB đơn/đôi nam nữ cấp quận và thành phố</li>
+                    <li>4 HCD đơn/đôi nam nữ cấp quận</li>
+                </ul>
+            </p>
+            <div class="image-container">
+                <img src="https://scontent.fhan14-2.fna.fbcdn.net/v/t39.30808-6/484777634_1139373591311606_3308036632822023814_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=833d8c&_nc_ohc=AaWX9fpkkFMQ7kNvwH_zkP5&_nc_oc=Adk6fMjyb6An1-pPo1p89NVWqyxZCfBllZFsv0n-DloZZg4GEWZd2x-k0Frj8sgXSSc&_nc_zt=23&_nc_ht=scontent.fhan14-2.fna&_nc_gid=eaA_8qFDufTF8TmnPwxnOA&oh=00_AfjThmGKEgBTCs5k21_eydNAr1kInMxyxfS7CH8-JzsLYw&oe=691EFCDE" alt="CLB Cầu lông" style="max-width: 50%; height: auto;">
+            </div>
+
+            
         </section>
     </main>
 
@@ -49,5 +54,4 @@
 </footer>
 </body>
 </html>
-
 
