--- a/basketball.html
+++ b/basketball.html
@@ -24,17 +24,18 @@
         <section class="activities">
             <h3>Tổng quan</h3>
             <p>CLB bóng rổ trường THPT Chu Văn An được thành lập nhằm tạo sân chơi cho các bạn trẻ đam mê bóng rổ, rèn luyện kỹ năng cá nhân, chiến thuật và thể lực tốt.</p>
-
+            <div class="image-container">
+                <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/301451907_559627299285733_1880711381416224415_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=hfbHvf3pQvgQ7kNvwEi_r-e&_nc_oc=AdnT49reCnm0t91WhRNoVYQDqCItdXBcVNwBQsdeBS2jX4_OBCWLfIJq9ypFke09gw8&_nc_zt=23&_nc_ht=scontent.fhan14-1.fna&_nc_gid=GDRWwmghoL2n40YFYd-EJg&oh=00_Afj3hSgXWesQcvOB4_cI2KxUob0RGmCIthOgKMp9YCDgRA&oe=691E8207" alt="CLB Bóng rổ" style="max-width: 50%; height: auto;">
+            </div>
             <h3>Thành tích</h3>
             <p>Các thành tích tiêu biểu:
                 <ul>
-                    <li>Top 8 Giải bóng rổ học sinh Thành phố 2024</li>
-                    <li>Á quân Giải giao hữu liên trường khu vực Tây Hồ 2023</li>
+                    <li>Hạng 3 giải bóng rổ học sinh VSBL </li>
+                    <li>Tổ chức giải đấu Chu Văn An 3x3 Championship 2025</li>
                 </ul>
             </p>
-
             <div class="image-container">
-                <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/301451907_559627299285733_1880711381416224415_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=hfbHvf3pQvgQ7kNvwEi_r-e&_nc_oc=AdnT49reCnm0t91WhRNoVYQDqCItdXBcVNwBQsdeBS2jX4_OBCWLfIJq9ypFke09gw8&_nc_zt=23&_nc_ht=scontent.fhan14-1.fna&_nc_gid=GDRWwmghoL2n40YFYd-EJg&oh=00_Afj3hSgXWesQcvOB4_cI2KxUob0RGmCIthOgKMp9YCDgRA&oe=691E8207" alt="CLB Bóng rổ" style="max-width: 50%; height: auto;">
+                <img src="https://scontent.fhan14-2.fna.fbcdn.net/v/t39.30808-6/489853405_1174214861160304_656214781149370590_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=833d8c&_nc_ohc=fY7mogXVt3YQ7kNvwGUhpn9&_nc_oc=AdkBbCckYlaZec_nlkhwPiFm3SyeKC5bNXqM3Gw5Bu4_Yogjprn_rZY_LR_HS4_jRWU&_nc_zt=23&_nc_ht=scontent.fhan14-2.fna&_nc_gid=IxmEKRq6Ia8nP78uTodSjQ&oh=00_AfiqNzh2oiVwcUYxq6zJH-1_f8QEMPZX-aOMUP8zqYeMXw&oe=691F0B0E" alt="CLB Bóng rổ" style="max-width: 50%; height: auto;">
             </div>
         </section>
     </main>
@@ -49,6 +50,3 @@
 </footer>
 </body>
 </html>
-
-
-
